<resources>
    <string name="app_name">TwoCulture</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up </string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_demo">DemoActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="translate"><Data><![CDATA[&]]> </Data></string>
    <string name="save_password_and_auto_login">save password and auto login</string>

    <!-- -->
    <string name="launch_title">2Cultures - link all cultures.</string>
    <string name="launch_btn_facebook">Login with Facebook</string>
    <string name="launch_btn_wechat">Login with Wechat</string>
    <string name="launch_btn_Email">Signup with Email</string>
    <string name="launch_btn_original">Login</string>
    <string name="launch_text_introduction">Cultural communication social platform\n\n
        Exchange of overseas life experience,\n\n
        Love and marriage,\n\n
        Migrants and locals,\n\n
        Relationship,friendship,\n\n
        Languages,travel,food,hobbies...</string>

    <string name="facebook_app_id">198451740608389</string>

    <string name="fb_login_protocol_scheme">fb198451740608389</string>

    <!--  message start -->
    <string name="message_friend_request">Friend Request</string>
    <string name="message_events_invitation">2C Events Invitation</string>
    <string name="message_notification">Notification</string>
    <string name="message_message_at">\u0040Message</string>
    <string name="no_data_hint">no data</string>
    <string name="view_invitation_detail">view more</string>
    <string name="message_conversation">Message</string>
    <string name="user_search_hint">Search by name or email</string>
    <string name="user_search_input_empty_hint">Please input search key word</string>

    <!-- my profile start -->
    <string name="profile_single">Single Profile</string>
    <string name="profile_topic">Topic</string>
    <string name="my_profile_title">My Profile</string>
    <string name="my_profile_right_title">Save</string>
    <string name="profile_smoking_habits">Smoking Habits</string>
    <string name="profile_drinking_habits">Drinking Habits</string>
    <string name="profile_diet">Diet</string>
    <string name="profile_height">Height</string>
    <string name="profile_body_type">Body Type</string>
    <string name="profile_eye_colour">Eye Colour</string>
    <string name="profile_hair_colour">Hair Colour</string>
    <string name="profile_current_status">Current Status</string>
    <string name="profile_ethnic_background">Ethnic Background</string>
    <string name="profile_star_sign">Start Sign</string>
    <string name="profile_education_level">Education Level</string>
    <string name="profile_career_fields">Career fields</string>
    <string name="profile_have_children">Have Children</string>
    <string name="profile_my_children">My Children</string>
    <string name="profile_want_children">Want(more) Children</string>
    <string name="profile_religion">Religion</string>
    <string name="profile_intention">Intention</string>

    <string name="profile_age">Age</string>
    <string name="profile_name">Name</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_from">From</string>
    <string name="profile_live_in">Living In</string>
    <string name="profile_migrate">Migrate To</string>
    <string name="profile_speak">I Speak</string>
    <string name="profile_language">2nd Language</string>
    <string name="profile_learning_language">I\'m Learning language</string>
    <string name="profile_relationship_status">Relationship Status</string>
    <string name="profile_fill_hint">is where you must fill</string>
    <string name="profile_tip">If above basic profile is not filled completely, you may not receive some of notification and invitation, or, be found by other members. </string>
    <string name="input_header">input header</string>
    <string name="input_content">input content</string>
    <string name="district">district</string>
    <string name="gender_male">male</string>
    <string name="gender_female">female</string>
    <string name="profile_input_name_hint">please input name</string>
    <string name="profile_input_valid_hint"> basic profile is not filled completely !</string>
    <string name="write_a_post_here">write a post here</string>
    <string name="post_error_hint">post content can\'t be null</string>
</resources>
