<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launch_bg"
    android:orientation="vertical"
    tools:context="com.twoculture.twoculture.ui.LaunchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/launch_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_large" />

    <Button
        android:id="@+id/btn_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:background="#ff70a0d0"
        android:text="@string/launch_btn_facebook"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login_wechat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#ff4acb36"
        android:text="@string/launch_btn_wechat"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffe89cbc"
        android:text="@string/launch_btn_Email"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_login_original"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_border_rect"
        android:text="@string/launch_btn_original"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/launch_text_introduction"
        android:textColor="@android:color/white" />

</LinearLayout>



