<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hyphenate="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/message_divider_shape"
    android:orientation="vertical"
    android:showDividers="middle|end">

    <FrameLayout
        android:id="@+id/fl_error_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></FrameLayout>

    <TextView
        android:id="@+id/tv_msg_friend_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/friend_request"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/message_friend_request"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_msg_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/message_notification"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/message_events_invitation"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_msg_events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/message_events"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/message_notification"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tv_msg_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/message_at"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/message_message_at"
        android:textColor="@color/black" />

    <com.hyphenate.easeui.widget.EaseConversationList
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        hyphenate:cvsListPrimaryTextSize="16sp" />

</LinearLayout>