<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider_color"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <include layout="@layout/common_header_layout" />


        <com.twoculture.twoculture.tools.RoundedImageView
            android:id="@+id/iv_add_head_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:src="@mipmap/ic_add_head_image"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <RelativeLayout
            android:id="@+id/rl_profile_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_name_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_gender"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_gender_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_from"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_from_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_from"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_from_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_living_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_living_in_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_live_in"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_living_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_living_in_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_migrate_to"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView

                android:id="@+id/tv_profile_migrate_to_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_migrate"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_migrate_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_migrate_to_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_speak"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_speak_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_speak"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_speak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_speak_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_language"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView

                android:id="@+id/tv_profile_language_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_language"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_language_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_learning_language"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_profile_learning_language_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_learning_language"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_learning_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_learning_language_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_profile_relationship"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_item_height"
            android:background="@color/white">

            <TextView

                android:id="@+id/tv_profile_relationship_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:drawablePadding="5dp"
                android:drawableRight="@mipmap/ic_input_start"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/profile_relationship_status"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_profile_relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="50dp"
                android:layout_toRightOf="@+id/tv_profile_relationship_title"
                android:ellipsize="middle"
                android:gravity="right"
                android:maxLines="1"
                android:textColor="@color/deep_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:src="@mipmap/ic_indication_right" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/ic_input_start"
            android:text="@string/profile_fill_hint"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/profile_tip"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>

</ScrollView>